[tool.poetry]
name = "mip2022"
version = "0.1.0"
description = ""
authors = ["Anton Kondrahin <Kondrahin210@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pybullet = "^3.2.5"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
pydantic = "^1.9.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
